--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
 
     <main id="main-content">
         <h1 class="main-title">Contacto</h1>
-        <form id="formulario-contacto">
+        <form id="formulario-contacto" novalidate>
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre" name="nombre" class="input-form"><br>
 
