--- a/sobremi.html
+++ b/sobremi.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mi</title>
+    <title>Sobre mí</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header id="main-header">
@@ -12,10 +13,14 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="avisos.html" class="nav-link">Avisos</a></li>
-                <li class="nav-item"><a href="sobremi.html" class="nav-link">Sobre mi</a></li>
+                <li class="nav-item"><a href="sobremi.html" class="nav-link">Sobre mí</a></li>
                 <li class="nav-item"><a href="materias2025.html" class="nav-link">Materias 2025</a></li>
                 <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
             </ul>
+            <div class="theme-buttons">
+                <button id="lightMode" class="theme-btn">☀️</button>
+                <button id="darkMode" class="theme-btn">🌙</button>
+            </div>
         </nav>
     </header>
     <main id="main-content">
@@ -46,5 +51,6 @@
     <footer id="main-footer">
         <p>&copy; 2025 Sebastián Tadeo Avila</p>
     </footer>
+    <script src="theme.js"></script>
 </body>
 </html>
