--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de materias 2025">
     <title>Mis Materias 2025</title>
     <link rel="stylesheet" href="estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -11,7 +12,7 @@
     <header id="main-header">
         <nav class="nav-menu">
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="avisos.html" class="nav-link">Avisos</a></li>
                 <li class="nav-item"><a href="sobremi.html" class="nav-link">Sobre mí</a></li>
                 <li class="nav-item"><a href="materias2025.html" class="nav-link">Materias 2025</a></li>
