--- a/materias2025.html
+++ b/materias2025.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de materias 2025">
     <title>Lista materias 2025</title>
     <link rel="stylesheet" href="estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,7 +15,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="avisos.html" class="nav-link">Avisos</a></li>
                 <li class="nav-item"><a href="sobremi.html" class="nav-link">Sobre mí</a></li>
-                <li class="nav-item"><a href="materias2025.html" class="nav-link">Materias 2025</a></li>
+                <li class="nav-item"><a href="materias2025.html" class="nav-link active">Materias 2025</a></li>
                 <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
             </ul>
             <div class="theme-buttons">
