--- a/diseno_y_desarrollo.html
+++ b/diseno_y_desarrollo.html
@@ -88,6 +88,32 @@
                         <a href="https://seavilax.github.io/uva_2_obligatoria/index.html" target="_blank" class="enlaces">Sitio</a>
                     </li>
                 </ul>
+                <h3>UVA 3: Introducción a JavaScript</h3>
+                <ul>
+                    <li>
+                        Ejercicio individual: JavaScript:
+                        <a href="https://github.com/seavilax/Avila_1225305_20052025_JavaScript.git" target="_blank" class="enlaces">Repositorio</a> |
+                        <a href="https://seavilax.github.io/Avila_1225305_20052025_JavaScript/" target="_blank" class="enlaces">Sitio</a>
+                    </li>
+                    <li>
+                        Ejercicio individual: Práctica Formulario:
+                        <a href="https://github.com/seavilax/Avila_1225305_portafolio.git" target="_blank" class="enlaces">Repositorio</a> |
+                        <a href="https://seavilax.github.io/Avila_1225305_portafolio/contacto.html " target="_blank" class="enlaces">Sitio</a>
+                    </li>
+                    <li>
+                        Ejercicio individual: Modo claro y oscuro :
+                        <a href="https://github.com/seavilax/Avila_1225305_portafolio.git" target="_blank" class="enlaces">Repositorio</a> |
+                        <a href="https://seavilax.github.io/Avila_1225305_portafolio/" target="_blank" class="enlaces">Sitio</a>
+                    </li>
+                </ul>
+                <h3>UVA 4: Despliegue</h3>
+                <ul>
+                    <li>
+                        Ejercicio individual: Integracion con GitHub :
+                        <a href="https://github.com/seavilax/Avila_1225305_07062025_GitHub.git" target="_blank" class="enlaces">Repositorio</a> |
+                        <a href="https://seavilax.github.io/Avila_1225305_07062025_GitHub/" target="_blank" class="enlaces">Sitio</a>
+                    </li>
+                </ul>
             </div>
             <!-- Caja de Biliografias -->
             <div class="box">
